syntax = "proto3";

package inspire.middleware.event.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/inspire/middleware/v1/event";

import "basetypes/v1/usedfor.proto";
import "basetypes/v1/conds.proto";
import "inspire/middleware/v1/event/coin/coin.proto";

message EventReq {
  optional uint32 ID = 10;
  optional string EntID = 11;
  optional string AppID = 20;
  optional basetypes.v1.UsedFor EventType = 30;
  optional string Credits = 50;
  optional string CreditsPerUSD = 60;
  optional uint32 MaxConsecutive = 70;
  optional string GoodID = 80;
  optional uint32 InviterLayers = 90;
  optional string AppGoodID = 100;
}

message Event {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 11;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"event_type"
  string EventTypeStr = 29;
  basetypes.v1.UsedFor EventType = 30;
  // @inject_tag: sql:"coupon_ids"
  string CouponIDsStr = 39;
  repeated string CouponIDs = 40;
  // @inject_tag: sql:"credits"
  string Credits = 50;
  // @inject_tag: sql:"credits_per_usd"
  string CreditsPerUSD = 60;
  // @inject_tag: sql:"max_consecutive"
  uint32 MaxConsecutive = 70;
  // @inject_tag: sql:"good_id"
  optional string GoodID = 80;
  // @inject_tag: sql:"app_good_id"
  optional string AppGoodID = 81;
  // @inject_tag: sql:"inviter_layers"
  uint32 InviterLayers = 90;
  repeated inspire.middleware.event.coin.v1.EventCoin Coins = 100;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 200;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 210;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.Uint32Val EventType = 30;
  optional basetypes.v1.StringVal GoodID = 40;
  optional basetypes.v1.StringVal AppGoodID = 41;
  optional basetypes.v1.StringSliceVal EntIDs = 50;
}

